2009-10-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs: Escape
	  markup to fix GTK errors and list misrendering.

2009-10-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeFormatting/CodeFormattingCommands.cs:
	  fixed 'Bug 545883 - Editor problem when using "Format
	  document"'.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	  Fixed 'Bug 545652 - Surround with 'lock' is not setting
	  focus in 'lock' itself to add the lock object'.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateCompletionData.cs:
	  Added icon for code surround with templates.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Commands/TextEditorCommands.cs:
	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  Merged insert templates/surround with commands.

2009-10-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/FileCommands.cs: In OpenFile, get
	  the encoding from the dialog before destroying it.

	* MonoDevelop.Ide.Gui/IdeStartup.cs: Fix warning.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ProgressMonitors.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultPad.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Select
	  first search result, if pad is auto focused.

2009-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs: Only
	  changed templates are saved by the panel.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Ide.csproj: Add options/* as "Data" items,
	and add a "AfterBuild" target to copy them to build\data.
	This matches the makefile behavior.
